# ROB530_WN2021_Team13_Final_Project

./: LICENSE  README.md  downloader.py  index.md
Localization/: ReadMe.md  __init__.py  cluster.py  cuboid.py  datapreprocess.py  kittidrives.py  kittipoles.py  kittiwrapper.py  localizationnclt.py  makegif.py  mapping.py  ncltpoles.py  ndshow.py  particlefilter.py  poles.py  polesdetection.py  pynclt.py  util.py
Localization/Improved_Particle_filter/: ReadMe.md  particlefilter.py
Localization/dataset/: ReadMe.md
Localization/improved_particlefilter/: ReadMe.md
ray_tracing/: CMakeLists.txt  README.md
ray_tracing/python/raytracing/: __init__.py  grid.py  gridmap.py  raytracing.py
results/: evaluation_6_7.npz  localization_3_6_7_2021-04-12_09-47-03.npz
results/2012-01-15/: evaluation_6_7.npz  globalmap_3_6_7.npz  localmaps_6_7.npz
results/2013-01-10/: evaluation_6_7.npz  globalmap_3_6_7.npz  localization_3_6_7_2021-04-12_14-24-54.npz  localmaps_6_7.npz
